--- a/src/ogn/components/map/map.component.html
+++ b/src/ogn/components/map/map.component.html
@@ -1,6 +1,1 @@
-<div class="map-container"
-  leaflet
-  [leafletOptions]="options"
-  (leafletMapReady)="onMapReady($event)"
-  (leafletClick)="mapClicked($event)">
-</div>
+<div id="map" class="map"></div>
