Implement settings, Improve info card, Add tracking

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -8,5 +8,8 @@
   <button mat-icon-button [routerLink]="'map'">
     <mat-icon>map</mat-icon>
   </button>
+  <button mat-icon-button (click)="openDialog()">
+    <mat-icon>settings</mat-icon>
+  </button>
 </mat-toolbar>
 <router-outlet></router-outlet>
