--- a/Client/src/ogn/components/settings-dialog/settings-dialog.component.scss
+++ b/Client/src/ogn/components/settings-dialog/settings-dialog.component.scss
@@ -1,7 +1,11 @@
-.radio-group {
+.display-flex {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.mt-1 {
+    margin-top: 10px;
 }
 
 .mt-2 {
