Barogram uses real history data and can be toggled via the info card

--- a/Client/src/ogn/components/barogram/barogram.component.html
+++ b/Client/src/ogn/components/barogram/barogram.component.html
@@ -1,12 +1,9 @@
-<div style="display: block;">
-    <canvas baseChart
-            [datasets]="lineChartData"
-            [legend]="false"
-            [options]="lineChartOptions"
-            [type]="lineChartType"
-            [labels]="lineChartLabels">
-    </canvas>
-</div>
-
-
-            <!-- [labels]="lineChartLabels" -->
+<canvas 
+    baseChart
+    type="line"
+    [legend]="false"
+    [datasets]="lineChartData"
+    [options]="lineChartOptions"
+    [labels]="lineChartLabels"
+    height="320">
+</canvas>
