Barogram responsive design

--- a/Client/src/ogn/components/barogram/barogram.component.html
+++ b/Client/src/ogn/components/barogram/barogram.component.html
@@ -1,9 +1,10 @@
-<canvas 
-    baseChart
-    type="line"
-    [legend]="false"
-    [datasets]="lineChartData"
-    [options]="lineChartOptions"
-    [labels]="lineChartLabels"
-    height="320">
-</canvas>
+<div class="chart-container">
+    <canvas 
+        baseChart
+        type="line"
+        [legend]="false"
+        [datasets]="lineChartData"
+        [options]="lineChartOptions"
+        [labels]="lineChartLabels">
+    </canvas>
+</div>
