--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -5,8 +5,12 @@
   <button mat-icon-button [routerLink]="'map'">
     <mat-icon>map</mat-icon>
   </button>
+  <button mat-icon-button [routerLink]="'list'">
+    <mat-icon>list</mat-icon>
+  </button>
   <button mat-icon-button (click)="openDialog()">
     <mat-icon>settings</mat-icon>
   </button>
 </mat-toolbar>
+
 <router-outlet></router-outlet>
