--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="toolbar">
   <img src="assets/logo_flugsportwien_weiß.png" alt="Logo" style="height: 40px; margin-right: 20px;" />
   <span>Flugsport Wien OGN Viewer</span>
   <span class="example-spacer"></span>
