--- a/Client/src/ogn/components/glider-list/glider-list.component.html
+++ b/Client/src/ogn/components/glider-list/glider-list.component.html
@@ -1,3 +1,49 @@
-<mat-card class="card">
-    <app-barogram></app-barogram>
-</mat-card>
+<mat-table [dataSource]="flights" matSort>
+  <!-- Flarm ID Column -->
+  <ng-container matColumnDef="flarmId">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Flarm ID </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.flarmId}} </mat-cell>
+  </ng-container>
+
+  <!-- Display Name Column -->
+  <ng-container matColumnDef="displayName">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Display Name </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.displayName}} </mat-cell>
+  </ng-container>
+
+  <!-- Registration Column -->
+  <ng-container matColumnDef="registration">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Registration </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.registration}} </mat-cell>
+  </ng-container>
+
+  <!-- Type Column -->
+  <ng-container matColumnDef="type">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Type </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.type}} </mat-cell>
+  </ng-container>
+
+  <!-- Model Column -->
+  <ng-container matColumnDef="model">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Model </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.model}} </mat-cell>
+  </ng-container>
+
+  <!-- Latitude Column -->
+  <ng-container matColumnDef="latitude">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Latitude </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.latitude}} </mat-cell>
+  </ng-container>
+
+  <!-- Longitude Column -->
+  <ng-container matColumnDef="longitude">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Longitude </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.longitude}} </mat-cell>
+  </ng-container>
+
+  <!-- Height MSL Column -->
+  <ng-container matColumnDef="heightMsl">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Height MSL </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.heightMsl}} </mat-cell>
+  </ng-container>
+</mat-table>
