--- a/Client/src/app/app.component.scss
+++ b/Client/src/app/app.component.scss
@@ -1,9 +1,6 @@
 .toolbar {
   height: 64px;
-  //box-shadow: 0px 6px 8px 0px rgba(0,0,0,0.3);
-  box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
-  z-index: 2;
-  //box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2), 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12); // This gives the toolbar a slight shadow, similar to the Angular Material site.
+  //box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
 }
 
 .example-spacer {
