--- a/Client/src/ogn/components/glider-list/glider-list.component.html
+++ b/Client/src/ogn/components/glider-list/glider-list.component.html
@@ -11,22 +11,29 @@
 
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    <td mat-cell *matCellDef="let element"> 
+        <div [ngSwitch]="element.status">
+            <div *ngSwitchCase="0" class="status-label status-blue"> Kein Signal </div>
+            <div *ngSwitchCase="1" class="status-label status-yellow"> Am Boden </div>
+            <div *ngSwitchCase="2" class="status-label status-green"> Im Flug </div>
+        </div>
+    </td>
   </ng-container>
 
-  <ng-container matColumnDef="flightTime">
+
+  <ng-container matColumnDef="flightDuration">
     <th mat-header-cell *matHeaderCellDef> Flugzeit </th>
-    <td mat-cell *matCellDef="let element"> {{element.takeOffTimestamp}} </td>
+    <td mat-cell *matCellDef="let element"> {{getFlightDuration(element.takeOffTimestamp, element.status)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="distanceFromHome">
     <th mat-header-cell *matHeaderCellDef> Entfernung von LOXN </th>
-    <td mat-cell *matCellDef="let element"> {{element.distanceFromHome}} </td>
+    <td mat-cell *matCellDef="let element"> {{getDistanceFromHome(element.distanceFromHome)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="altitude">
     <th mat-header-cell *matHeaderCellDef> Flughöhe </th>
-    <td mat-cell *matCellDef="let element"> {{element.altitude}} </td>
+    <td mat-cell *matCellDef="let element"> {{getAltitude(element.altitude, element.status)}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
