--- a/Client/src/ogn/components/glider-list/glider-list.component.scss
+++ b/Client/src/ogn/components/glider-list/glider-list.component.scss
@@ -1,3 +1,30 @@
 table {
   width: 100%;
 }
+
+.status-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px; 
+  color: white;
+  padding: 6px 6px;
+  max-width: 100px;
+}
+
+.status-red {
+  background-color: #f44336; //e15241
+}
+
+.status-yellow {
+  background-color: #f19c38;
+  color: black; /* override text color to be black for better visibility */
+}
+
+.status-green {
+  background-color: #67ac5b; 
+}
+
+.status-blue {
+  background-color: #3f51b5;
+}
