Removed title from toolbar

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="toolbar">
   <img src="assets/logo_flugsportwien_weiß.png" alt="Logo" style="height: 40px; margin-right: 20px;" />
-  <span>Flugsport Wien OGN Viewer</span>
+  <!-- <span>Flugsport Wien OGN Viewer</span> -->
   <span class="example-spacer"></span>
   <button mat-icon-button [routerLink]="'map'">
     <mat-icon>map</mat-icon>
