--- a/Client/src/ogn/components/glider-list/glider-list.component.html
+++ b/Client/src/ogn/components/glider-list/glider-list.component.html
@@ -36,6 +36,15 @@
     <td mat-cell *matCellDef="let element"> {{getAltitude(element.altitude, element.status)}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Aktionen </th>
+    <td mat-cell *matCellDef="let element"> 
+      <button mat-icon-button (click)="navigateToMap(element.lat, element.lon)"  matTooltip="Auf Karte anzeigen">
+        <mat-icon>location_searching</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
