--- a/Client/src/ogn/components/glider-list/glider-list.component.html
+++ b/Client/src/ogn/components/glider-list/glider-list.component.html
@@ -1,50 +1,64 @@
 <table mat-table [dataSource]="gliderList" class="mat-elevation-z6">
   <ng-container matColumnDef="displayName">
-    <th mat-header-cell *matHeaderCellDef> Kennzeichen </th>
-    <td mat-cell *matCellDef="let element"> {{element.registration}} ({{element.registrationShort}}) </td>
-  </ng-container>
-
-  <ng-container matColumnDef="model">
-    <th mat-header-cell *matHeaderCellDef> Modell </th>
-    <td mat-cell *matCellDef="let element"> {{element.model}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let element"> 
-        <div [ngSwitch]="element.status">
-            <div *ngSwitchCase="0" class="status-label status-blue"> Kein Signal </div>
-            <div *ngSwitchCase="1" class="status-label status-yellow"> Am Boden </div>
-            <div *ngSwitchCase="2" class="status-label status-green"> Im Flug </div>
-        </div>
+    <th mat-header-cell *matHeaderCellDef>Kennzeichen</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.registration }} ({{ element.registrationShort }})
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="model">
+    <th mat-header-cell *matHeaderCellDef>Modell</th>
+    <td mat-cell *matCellDef="let element">{{ element.model }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let element">
+      <div [ngSwitch]="element.status">
+        <div *ngSwitchCase="0" class="status-label status-blue">
+          Kein Signal
+        </div>
+        <div *ngSwitchCase="1" class="status-label status-yellow">Am Boden</div>
+        <div *ngSwitchCase="2" class="status-label status-green">Im Flug</div>
+      </div>
+    </td>
+  </ng-container>
 
   <ng-container matColumnDef="flightDuration">
-    <th mat-header-cell *matHeaderCellDef> Flugzeit </th>
-    <td mat-cell *matCellDef="let element"> {{getFlightDuration(element.takeOffTimestamp, element.status)}} </td>
+    <th mat-header-cell *matHeaderCellDef>Flugzeit</th>
+    <td mat-cell *matCellDef="let element">
+      {{ getFlightDuration(element.takeOffTimestamp, element.status) }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="distanceFromHome">
-    <th mat-header-cell *matHeaderCellDef> Entfernung von LOXN </th>
-    <td mat-cell *matCellDef="let element"> {{getDistanceFromHome(element.distanceFromHome)}} </td>
+    <th mat-header-cell *matHeaderCellDef>Entfernung von LOXN</th>
+    <td mat-cell *matCellDef="let element">
+      {{ getDistanceFromHome(element.distanceFromHome) }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="altitude">
-    <th mat-header-cell *matHeaderCellDef> Flughöhe </th>
-    <td mat-cell *matCellDef="let element"> {{getAltitude(element.altitude, element.status)}} </td>
+    <th mat-header-cell *matHeaderCellDef>Flughöhe</th>
+    <td mat-cell *matCellDef="let element">
+      {{ getAltitude(element.altitude, element.status) }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef> Aktionen </th>
-    <td mat-cell *matCellDef="let element"> 
-      <button mat-icon-button (click)="navigateToMap(element.lat, element.lon)"  matTooltip="Auf Karte anzeigen">
+    <th mat-header-cell *matHeaderCellDef>Aktionen</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        *ngIf="element.status !== 0"
+        mat-icon-button
+        (click)="navigateToMap(element.latitude, element.longitude)"
+        matTooltip="Auf Karte anzeigen"
+      >
         <mat-icon>location_searching</mat-icon>
       </button>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
