--- a/Client/src/ogn/components/info-card/info-card.component.html
+++ b/Client/src/ogn/components/info-card/info-card.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="flight" style="position: absolute; top: 74px; right: 10px; width: 250px;">
+<mat-card *ngIf="flight" class="info-card">
     <mat-card-header>
         <div style="display: flex; justify-content: space-between; align-items: left; width: 100%;">
             <div>
