--- a/Client/src/ogn/components/info-card/info-card.component.scss
+++ b/Client/src/ogn/components/info-card/info-card.component.scss
@@ -14,12 +14,51 @@
     color: orange;
 }
 
-.info-card {
+.info-card-desktop {
     position: absolute; 
     top: 74px; 
     right: 10px; 
     width: 250px;
     padding: 0px;
+}
+
+.info-card-mobile {
+    position: absolute; 
+    top: 6px; 
+    right: 6px; 
+    width: 250px;
+    padding: 0px;
+    padding-bottom: 10px;
+}
+
+.info-card-header {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: left; 
+    width: 100%;
+}
+
+.close-button {
+    margin-right: -10px; margin-top: -10px;
+}
+
+.action-button-container-desktop {
+    display: flex; 
+    justify-content: left; 
+    align-items: center; 
+    width: 100%;
+}
+
+.action-button-container-mobile {
+    position: absolute;
+    top: 123px;
+    right: 2px;
+    display: flex;
+    flex-direction: column;
+}
+
+.second-action-button-mobile {
+    margin-top: -5px;
 }
 
 .mat-mdc-card-content {
