Highlight selected page in bottom navigation bar

--- a/Client/src/app/components/bottom-navigation/bottom-navigation.component.html
+++ b/Client/src/app/components/bottom-navigation/bottom-navigation.component.html
@@ -1,17 +1,17 @@
 <mat-card class="navbar">
-    <a href="/" class="nav-item">
+    <a routerLink="/map" routerLinkActive="active" class="nav-item">
         <mat-icon class="icon">public</mat-icon>
         <span>Karte</span>
     </a>
-    <a href="/list" class="nav-item">
+    <a routerLink="/list" routerLinkActive="active" class="nav-item">
         <mat-icon class="icon">flight</mat-icon>
         <span>Flugzeuge</span>
     </a>
-    <a href="/history" class="nav-item">
+    <a routerLink="/history" routerLinkActive="active" class="nav-item">
         <mat-icon class="icon">manage_search</mat-icon>
         <span>Startliste</span>
     </a>
-    <a href="/settings" class="nav-item">
+    <a routerLink="/settings" routerLinkActive="active" class="nav-item">
         <mat-icon class="icon">settings</mat-icon>
         <span>Einstellungen</span>
     </a>
