--- a/Client/src/ogn/components/settings/settings.component.scss
+++ b/Client/src/ogn/components/settings/settings.component.scss
@@ -1,7 +1,20 @@
-.display-flex {
+.card {
+    height: 100%;
+}
+
+.title {
+    font-size: large;
+    font-weight: 500;
+}
+
+.section {
+    margin-bottom: 20px;
+}
+
+.group {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start; 
 }
 
 .mt-1 {
@@ -11,3 +24,7 @@
 .mt-2 {
     margin-top: 20px;
 }
+
+mat-card {
+    margin-bottom: 15px;
+  }
