--- a/Client/src/app/components/bottom-navigation/bottom-navigation.component.html
+++ b/Client/src/app/components/bottom-navigation/bottom-navigation.component.html
@@ -1,4 +1,5 @@
-<mat-card class="navbar">
+<div>
+  <mat-card class="navbar">
     <a routerLink="/map" routerLinkActive="active" class="nav-item">
         <mat-icon class="icon">public</mat-icon>
         <span>Karte</span>
@@ -15,4 +16,5 @@
         <mat-icon class="icon">settings</mat-icon>
         <span>Einstellungen</span>
     </a>
-</mat-card>
+  </mat-card>
+</div>
