--- a/Client/src/app/app.component.scss
+++ b/Client/src/app/app.component.scss
@@ -1,6 +1,15 @@
 .toolbar {
   height: 64px;
-  //box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
+}
+
+.content-mobile {
+  height: calc(100% - 56px);
+  overflow: scroll;
+}
+
+.content-desktop {
+  height: calc(100% - 64px);
+  overflow: scroll;
 }
 
 ::ng-deep .mat-mdc-snack-bar-container {
