--- a/Client/src/ogn/components/glider-list/glider-list.component.html
+++ b/Client/src/ogn/components/glider-list/glider-list.component.html
@@ -1,6 +1,6 @@
 <!-- The original table view, displayed in landscape mode -->
 <div *ngIf="!isMobilePortrait">
-  <table mat-table [dataSource]="gliderList" class="mat-elevation-z6">
+  <table mat-table [dataSource]="gliderList">
     <ng-container matColumnDef="displayName">
       <th mat-header-cell *matHeaderCellDef>Kennzeichen</th>
       <td mat-cell *matCellDef="let element">
@@ -65,8 +65,8 @@
 </div>
 
 <!-- The new list view, displayed in portrait mode -->
-<div *ngIf="isMobilePortrait">
-  <div class="glider-list" *ngFor="let element of gliderList">
+<div *ngIf="isMobilePortrait" class="glider-list">
+  <div *ngFor="let element of gliderList">
     <mat-card class="glider-card">
       <div class="glider-item">
         <div class="glider-item-row">
@@ -103,7 +103,7 @@
           </div>
 
           <div class="glider-info">
-            <mat-icon class="glider-value-icon">home</mat-icon> 
+            <mat-icon class="glider-value-icon">home</mat-icon>
             <!-- home_pin -->
             <div class="glider-value">{{ getDistanceFromHome(element.distanceFromHome) }}</div>
           </div>
