--- a/Client/src/ogn/components/glider-list/glider-list.component.scss
+++ b/Client/src/ogn/components/glider-list/glider-list.component.scss
@@ -30,10 +30,12 @@ table {
 }
 
 .glider-list {
+  height: 100%;
   width: 100%;
 }
 
 .glider-card {
+  height: 100%;
   padding: 16px;
   margin-bottom: 2px;
 }
