--- a/Client/src/ogn/components/map/map.component.scss
+++ b/Client/src/ogn/components/map/map.component.scss
@@ -1,14 +1,7 @@
 .map {
     width: 100%;
+    height: 100%;
     -webkit-tap-highlight-color: transparent;
-}
-
-.map-height-mobile {
-    height: calc(100% - 56px);
-}
-
-.map-height-desktop {
-    height: calc(100% - 64px);
 }
 
 .barogram-card-desktop {
