New Feature: Toggle private gliders in glider list and departure list

--- a/Client/src/ogn/components/settings-dialog/settings-dialog.component.html
+++ b/Client/src/ogn/components/settings-dialog/settings-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Einstellungen</h1>
 <mat-dialog-content class="display-flex">
-    <mat-radio-group class="display-flex" [(ngModel)]="settings.gliderFilter">
+    <mat-radio-group class="display-flex" [(ngModel)]="settings.gliderFilterOnMap">
         <mat-radio-button [value]="0">Nur Vereinsflugzeuge</mat-radio-button>
         <mat-radio-button [value]="1">Vereinsflugzeuge & Private Flugzeuge von Mitgliedern</mat-radio-button>
         <mat-radio-button [value]="2">Alle Segelflugzeuge</mat-radio-button>
